[package]
name = "naga-to-tokenstream"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
naga = { version = "0.12", features = ["wgsl-out"] }
wgsl-minifier = { version = "0.1", optional = true}

quote = "1.0"
proc-macro2 = "1.0"
syn = { version = "1.0", features = ["full"] }

[features]
minify = ["dep:wgsl-minifier"]
glam = []
naga = []
encase = []