[package]
name = "naga-to-tokenstream"
version = "0.5.0"
edition = "2021"
license = "MIT"
description = "Creates a TokenStream describing parts of a Naga module."
homepage = "https://github.com/LucentFlux/naga-to-tokenstream"
repository = "https://github.com/LucentFlux/naga-to-tokenstream"
readme = "README.md"
keywords = ["gamedev", "graphics", "wgsl", "wgpu", "shader"]
categories = ["game-development", "graphics"]
include = ["/Cargo.toml", "/LICENSE", "/README.md", "/src/**"]

[dependencies]
naga = { version = "0.19", features = ["clone", "wgsl-out"] }
wgsl-minifier = { version = "0.4", optional = true}

quote = "1.0"
proc-macro2 = "1.0"
syn = { version = "2.0", features = ["full"] }

[features]
minify = ["dep:wgsl-minifier"]
glam = []
naga = []
encase = []
